prevent sitemap behind sidebar, 4th attempt

--- a/docs/assets/css/help.css
+++ b/docs/assets/css/help.css
@@ -31,8 +31,8 @@ figcaption { text-align: center; background-color: #ddd; border-radius: 3px; mar
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
   svg {
-    -ms-transform: translate(-88px, -80px) scale(0.75, 0.75) /* IE 9 */
-    -webkit-transform: translate(-88px, -80px) scale(0.75, 0.75) /* Safari */
-    transform: translate(-88px, -80px) scale(0.75, 0.75)
+    -ms-transform: translate(-88px, -80px) scale(0.75, 0.75); /* IE 9 */
+    -webkit-transform: translate(-88px, -80px) scale(0.75, 0.75); /* Safari */
+    transform: translate(-88px, -80px) scale(0.75, 0.75);
   }
 }
